--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.4",
+        "illuminate/support": ">5.3.0"
     },
     "autoload": {
         "psr-4": {
