--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": ">5.3.0"
+        "illuminate/support": ">=5.3.0"
     },
     "autoload": {
         "psr-4": {
